[package]
name = "cane"
version = "0.0.1"
authors = ["Matias <matias.pz@proton.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0.24"
uuid = { version = "0.8.2", features = ["v3", "v4"] }
hematite-nbt = "0.5.2"
async-trait = "0.1.50"
yaml-rust = "0.4.5"
legion = "0.4.0"
serde_json = "1.0.64"
nalgebra = { version = "0.27.0", features = ["serde-serialize"] }
serde = "1.0.126"
num-integer = "0.1"
